Support: made adaptive design in this page

--- a/src/support.html
+++ b/src/support.html
@@ -23,9 +23,7 @@
 
         <div class="page-header">
             <button class="page-blueBtn">Нужна поддержка!
-                <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 11L6 6L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -51,8 +49,8 @@
                     <button class="support-care-btn">Заказать</button>
                 </div>
                 <div class="support-care-img">
-                    <img class="support-care-img-girl" src="img/support/girl-laptop.png" alt="girl-laptop"/>
-                    <img class="support-care-img-shadow" src="img/support/girl-shadow.png" alt="girl-laptop"/>
+                    <img class="support-care-img-girl desktop" src="img/support/girl-laptop.png" alt="girl-laptop"/>
+                    <img class="support-care-img-shadow desktop" src="img/support/girl-shadow.png" alt="girl-laptop"/>
                 </div>
             </div>
         </div>
@@ -149,33 +147,23 @@
             <div class="page-list-block-cont container">
                 <p class="page-list-title">В список услуги входит:</p>
                 <div class="page-list-item">
-                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                        <use href="#resize-horizontal-round"/>
-                    </svg>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Контроль и отслеживание корректной работы сайта и хостинг-сервера</span>
                 </div>
                 <div class="page-list-item">
-                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                        <use href="#resize-horizontal-round"/>
-                    </svg>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Редактирование контента сайта: дополнение, создание, наполнение, редизайн и доработка текущего</span>
                 </div>
                 <div class="page-list-item">
-                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                        <use href="#resize-horizontal-round"/>
-                    </svg>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Мониторинг по безопасности: защита от вирусов, установка модулей</span>
                 </div>
                 <div class="page-list-item">
-                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                        <use href="#resize-horizontal-round"/>
-                    </svg>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Оптимизация скорости работы сайта</span>
                 </div>
                 <div class="page-list-item">
-                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                        <use href="#resize-horizontal-round"/>
-                    </svg>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Консультации</span>
                 </div>
             </div>
