Mobile: added some styles in this page and made some adaptive design

--- a/src/html/all-pages/dropdown.html
+++ b/src/html/all-pages/dropdown.html
@@ -21,8 +21,9 @@
             <a href="/support.html">
                 <li class="dropdown-submenu-item">Поддержка сайтов</li>
             </a>
-
-            <p class="dropdown-submenu-title">Разработка мобильных игр и приложений</p>
+            <a href="/mobile.html">
+                 <p class="dropdown-submenu-title">Разработка мобильных игр и приложений</p>
+            </a>
         </ul>
 
         <ul class="dropdown-submenu">
