--- a/src/html/all-pages/svg-sprites.html
+++ b/src/html/all-pages/svg-sprites.html
@@ -40,4 +40,8 @@
     <symbol id="attention" viewBox="0 0 20 20">
         <path d="M10 20C4.477 20 0 15.523 0 10S4.477 0 10 0s10 4.477 10 10c-.006 5.52-4.48 9.994-10 10zm-1-7v2h2v-2H9zm0-8v6h2V5H9z" fill="#01C2FF"/>
     </symbol>
+    <symbol id="resize-horizontal-roundBlack" viewBox="0 0 24 25">
+        <path d="M4 8.302C4 6.09286 5.79086 4.302 8 4.302H16C18.2091 4.302 20 6.09286 20 8.302V16.302C20 18.5111 18.2091 20.302 16 20.302H8C5.79086 20.302 4 18.5111 4 16.302V8.302Z" fill="black"/>
+        <path d="M11 15.302L14 12.302L11 9.302M8 20.302H16C18.2091 20.302 20 18.5111 20 16.302V8.302C20 6.09286 18.2091 4.302 16 4.302H8C5.79086 4.302 4 6.09286 4 8.302V16.302C4 18.5111 5.79086 20.302 8 20.302Z" stroke="#01C2FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    </symbol>
 </svg>
