--- a/src/internet-shops.html
+++ b/src/internet-shops.html
@@ -196,7 +196,7 @@
 <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
                 </div>
               </div>
-                <span class="page-look"><a class="page-look-href" href='#'>Смотреть все</a></span>
+                <span class="page-look"><a class="page-look-href" href="cases.html">Смотреть все</a></span>
             </div>
         </div>
     </section>
