--- a/src/analysis.html
+++ b/src/analysis.html
@@ -31,7 +31,7 @@
 
         <div class="analysis-description container">Сертифицированные бизнес-разработчики проведут подробный бизнес-анализ вашей организации, найдут пути улучшения и соберут статистику по выполнению бизнес-процессов. В процессе решения задач бизнес анализа специалисты компании применяют методики мозгового штурма, сопоставительного анализа и интервьюирования, моделируют данные и процессы, выполняют анализ рисков, коренных причин и требований.</div>
 
-        <div class="analysis-modeling">
+        <!--<div class="analysis-modeling">
             <div class="analysis-modeling-cont container">
 
                 <div class="modeling-block-text">
@@ -169,7 +169,7 @@
 
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <div class="analysis-useCase">
             <div class="analysis-useCase-cont container">
