--- a/src/development.html
+++ b/src/development.html
@@ -69,50 +69,50 @@
             <p class="page-pros-title">Плюсы работы с нами</p>
 
             <div class="page-pros-items">
-              <div class="page-pros-item slider1 swiper-slide swiper-slide-active">
-                <svg class="svg-qualification"  width="40" height="28">
-                  <use href="#qualification"/>
-                </svg>
-                <!--               <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>-->
-                <p class="pros-item-header">Квалификация</p>
-                <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-              </div>
+                    <div class="page-pros-item ">
+                        <svg class="svg-qualification" width="40" height="28">
+                            <use href="#qualification"/>
+                        </svg>
+                        <!--               <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>-->
+                        <p class="pros-item-header">Квалификация</p>
+                        <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
+                    </div>
 
-              <div class="page-pros-item slider2 swiper-slide swiper-slide-next">
-                <svg class="svg-transparency" width="42" height="30">
-                  <use href="#transparency"/>
-                </svg>
-                <!--                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>-->
-                <p class="pros-item-header">Максимальная прозрачность</p>
-                <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
-              </div>
+                    <div class="page-pros-item">
+                        <svg class="svg-transparency" width="42" height="30">
+                            <use href="#transparency"/>
+                        </svg>
+                        <!--                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>-->
+                        <p class="pros-item-header">Максимальная прозрачность</p>
+                        <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+                    </div>
 
-              <div class="page-pros-item slider3 swiper-slide swiper-slide-next">
-                <svg class="svg-result" width="38" height="44">
-                  <use href="#result"/>
-                </svg>
-                <!--                <img class="pros-item-img" src="@img/icons/icons.svg#result" alt="result"/>-->
-                <p class="pros-item-header">Быстрый результат</p>
-                <p class="pros-item-text">Создание полноценного сайта сроком до 2х недель</p>
-              </div>
+                    <div class="page-pros-item">
+                        <svg class="svg-result" width="38" height="44">
+                            <use href="#result"/>
+                        </svg>
+                        <!--                <img class="pros-item-img" src="@img/icons/icons.svg#result" alt="result"/>-->
+                        <p class="pros-item-header">Быстрый результат</p>
+                        <p class="pros-item-text">Создание полноценного сайта сроком до 2х недель</p>
+                    </div>
 
-              <div class="page-pros-item slider4 swiper-slide swiper-slide-next">
-                <svg class="svg-support" width="40" height="40" >
-                  <use href="#support"/>
-                </svg>
-                <!--                <img class="pros-item-img" src="@img/icons/icons.svg#support" alt="support"/>-->
-                <p class="pros-item-header">Дальнейшее сопровождение</p>
-                <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>
-              </div>
+                    <div class="page-pros-item">
+                        <svg class="svg-support" width="40" height="40">
+                            <use href="#support"/>
+                        </svg>
+                        <!--                <img class="pros-item-img" src="@img/icons/icons.svg#support" alt="support"/>-->
+                        <p class="pros-item-header">Дальнейшее сопровождение</p>
+                        <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>
+                    </div>
 
-              <div class="page-pros-item slider5 swiper-slide swiper-slide-prev">
-                <svg class="svg-quality" width="36" height="40">
-                  <use href="#quality"/>
-                </svg>
-                <!--                <img class="pros-item-img" src="@img/icons/icons.svg#quality" alt="quality"/>-->
-                <p class="pros-item-header">Знак качества</p>
-                <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>
-              </div>
+                    <div class="page-pros-item">
+                        <svg class="svg-quality" width="36" height="40">
+                            <use href="#quality"/>
+                        </svg>
+                        <!--                <img class="pros-item-img" src="@img/icons/icons.svg#quality" alt="quality"/>-->
+                        <p class="pros-item-header">Знак качества</p>
+                        <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>
+                    </div>
             </div>
           </div>
 
@@ -245,13 +245,15 @@
         </div>
 
         <div class="page-cases">
-            <div class="page-cases-container container">
+            <div class="page-cases-container container  ">
               <p class="page-cases-title">Наши кейсы</p>
-              <div class="page-cases-gallery">
-                  <img class="cases-gallery-item" src='img/development/Frame%20105.png' alt="frame1"/>
-                  <img class="cases-gallery-item" src='img/development/Frame%20107.png' alt="frame1"/>
-                 <img class="cases-gallery-item" src='img/development/Frame%20106.png' alt="frame1"/>
-              </div>
+                <div class="page-cases-gallery swiper">
+                    <div class="swiper-wrapper">
+                        <img class="swiper-slide cases-gallery-item" src='img/development/Frame%20105.png'/>
+                        <img class="swiper-slide cases-gallery-item" src='img/development/Frame%20107.png'/>
+                        <img class="swiper-slide cases-gallery-item" src='img/development/Frame%20106.png'/>
+                    </div>
+                </div>
               <div class="page-cases-swiper">
                   <div class="swiper-arrows">
                     <div class="swiper-arrow swiper-arrow-prev">
