--- a/src/html/home/first-screen.html
+++ b/src/html/home/first-screen.html
@@ -44,10 +44,10 @@
       </div>
       <div class="swiper-arrows">
         <div class="swiper-arrow swiper-arrow-prev">
-          <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
+          <img src="@img/icons/icons.svg#arrow-left" alt="arrow" />
         </div>
         <div class="swiper-arrow swiper-arrow-next">
-          <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
+          <img src="@img/icons/icons.svg#arrow-right" alt="arrow" />
         </div>
       </div>
     </div>
