--- a/src/html/home/prefooter-gallery.html
+++ b/src/html/home/prefooter-gallery.html
@@ -1,10 +1,10 @@
-<section class="prefooter-gallery">
-  <div class="bitrix-gallery">
-    <div class="bitrix-gallery-container container">
-      <img class="bitrix-gallery-item" src="../../img/prefooter/Frame%20203.png" alt="frame1"/>
-      <img class="bitrix-gallery-item" src="../../img/prefooter/Frame%20204.png" alt="frame2"/>
-      <img class="bitrix-gallery-item" src="../../img/prefooter/Frame%20205.png" alt="frame3"/>
-      <img class="bitrix-gallery-item" src="../../img/prefooter/Frame%20206.png" alt="frame4"/>
+<section class="prefooter-gallery container">
+  <div class="bitrix-gallery swiper">
+    <div class="bitrix-gallery-container swiper-wrapper">
+      <img class="swiper-slide bitrix-gallery-item" src="../../img/prefooter/Frame%20203.png" alt="frame1"/>
+      <img class="swiper-slide bitrix-gallery-item" src="../../img/prefooter/Frame%20204.png" alt="frame2"/>
+      <img class="swiper-slide bitrix-gallery-item" src="../../img/prefooter/Frame%20205.png" alt="frame3"/>
+      <img class="swiper-slide bitrix-gallery-item" src="../../img/prefooter/Frame%20206.png" alt="frame4"/>
     </div>
   </div>
 </section>
