--- a/src/mobile.html
+++ b/src/mobile.html
@@ -29,112 +29,154 @@
             <p class="mobile-description-text">При создании наши разработчики владеют навыками объектно-ориентированного программирования, языком программирования С# с использованием плагинов, а также анализируют психологию игроков, принципы баланса игры и иные нюансы геймдева.</p>
         </div>
 
-        <div class="mobile-content container">
-            <p class="mobile-content-header">Этапы разработки мобильной игры</p>
+
+        <div class="mobile-content">
+            <p class="mobile-content-header container">Этапы разработки мобильной игры</p>
 
             <div class="content-item">
-                <div class="content-item-block">
-                    <img class="item-block-num" src="img/mobile/number1.png" alt="number1"/>
-                    <div class="item-block-cont">
-                        <p class="item-block-title">Рождение идеи</p>
-                        <p class="item-block-text">Проводится маркетинговый и бизнес-анализ с целью выявления целесообразности разработки</p>
-                    </div>
-                </div>
-
-                <img class="content-item-img" src="img/mobile/games1.png" alt="games1"/>
-            </div>
-
-            <div class="content-item">
-                <img class="content-item-img" src="img/mobile/games2.png" alt="games2"/>
-
-                <div class="content-item-block">
-                    <img class="item-block-num" src="img/mobile/number2.png" alt="number2"/>
-                    <div>
-                        <p class="item-block-title">Выбор жанра игры</p>
-                        <p class="item-block-text">Обычно выделяют 3 основных направления:</p>
-                        <div class="page-list-item">
-                            <svg class="page-list-img" >
-                                <use href="#resize-horizontal-roundBlack"/>
-                            </svg>
-                            <span class="page-list-text">Hyper casual</span>
-                        </div>
-                        <div class="page-list-item">
-                            <svg class="page-list-img" >
-                                <use href="#resize-horizontal-roundBlack"/>
-                            </svg>
-                            <span class="page-list-text">Midcore</span>
-                        </div>
-                        <div class="page-list-item">
-                            <svg class="page-list-img" >
-                                <use href="#resize-horizontal-roundBlack"/>
-                            </svg>
-                            <span class="page-list-text">Hardcore</span>
+                <div class="content-item-cont container">
+                    <div class="content-item-block">
+                        <img class="item-block-num" src="img/mobile/number1.png" alt="number1"/>
+                        <div class="item-block-cont">
+                            <p class="item-block-title">Рождение идеи</p>
+                            <p class="item-block-text">Проводится маркетинговый и бизнес-анализ с целью выявления целесообразности разработки</p>
                         </div>
                     </div>
-                </div>
 
-            </div>
-
-            <div class="content-item">
-                <div class="content-item-block">
-                    <img class="item-block-num" src="img/mobile/number3.png" alt="number3"/>
-                    <div class="item-block-cont">
-                        <p class="item-block-title">Среда разработки</p>
-                        <p class="item-block-text">Наша команда работает на самой крупной платформе - Unity. Платформа с большим выбором инструментов</p>
+                    <div class="content-item-blockImg">
+                        <img class="content-item-img" src="img/mobile/games1.png" alt="games1"/>
+                        <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
                     </div>
                 </div>
-
-                <img class="content-item-img" src="img/mobile/games3-1.png" alt="games3-1"/>
-                <img class="content-item-back" src="img/mobile/games3-2.png" alt="games3-2"/>
             </div>
 
             <div class="content-item">
-                <img class="content-item-img" src="img/mobile/games4.png" alt="games4"/>
+                <div class="content-item-cont container">
 
-                <div class="content-item-block">
-                    <img class="item-block-num" src="img/mobile/number4.png" alt="number4"/>
-                    <p class="item-block-title">Проработка геймплея</p>
-                    <p class="item-block-text">Это своего рода способы удержания в игре - дополнительные функции, бонусы и секретные предметы</p>
-                </div>
-            </div>
+                    <div class="content-item-blockImg content-item-blockImg2">
+                        <img class="content-item-img" src="img/mobile/games2.png" alt="games2"/>
+                        <img class="content-item-imgBgd content-item-imgBgd2" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    </div>
 
-            <div class="content-item">
-                <div class="content-item-block">
-                    <img class="item-block-num" src="img/mobile/number5.png" alt="number5"/>
-                    <div class="item-block-cont">
-                        <p class="item-block-title">Выбор платформы</p>
-                        <p class="item-block-text">Android, iOS, кроссплатформенная</p>
+                    <div class="content-item-block">
+                        <img class="item-block-num item-block-num2" src="img/mobile/number2.png" alt="number2"/>
+                        <div class="item-block-cont item-block-cont2">
+                            <p class="item-block-title">Выбор жанра игры</p>
+                            <p class="item-block-text">Обычно выделяют 3 основных направления:</p>
+                            <div class="page-list-item">
+                                <svg class="page-list-img" >
+                                    <use href="#resize-horizontal-roundBlack"/>
+                                </svg>
+                                <span class="page-list-text">Hyper casual</span>
+                            </div>
+                            <div class="page-list-item">
+                                <svg class="page-list-img" >
+                                    <use href="#resize-horizontal-roundBlack"/>
+                                </svg>
+                                <span class="page-list-text">Midcore</span>
+                            </div>
+                            <div class="page-list-item">
+                                <svg class="page-list-img" >
+                                    <use href="#resize-horizontal-roundBlack"/>
+                                </svg>
+                                <span class="page-list-text">Hardcore</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
-                <img class="content-item-img" src="img/mobile/games5.png" alt="games5"/>
             </div>
 
-            <div class="content-item">
-                <img class="content-item-img" src="img/mobile/games6.png" alt="games6"/>
 
-                <div class="content-item-block">
-                    <img class="item-block-num" src="img/mobile/number6.png" alt="number6"/>
-                    <p class="item-block-title">Геймдизайн</p>
-                    <p class="item-block-text">Самый длительный, ведь именно сейчас прорабатывается история, отрисовываются персонажи и весь пользовательский путь</p>
+            <div class="content-item">
+                <div class="content-item-cont container">
+                    <div class="content-item-block">
+                        <img class="item-block-num" src="img/mobile/number3.png" alt="number3"/>
+                        <div class="item-block-cont">
+                            <p class="item-block-title">Среда разработки</p>
+                            <p class="item-block-text">Наша команда работает на самой крупной платформе - Unity. Платформа с большим выбором инструментов</p>
+                        </div>
+                    </div>
+
+                    <div class="content-item-blockImg">
+                        <img class="content-item-img" src="img/mobile/games3-1.png" alt="games3-1"/>
+                        <img class="content-item-back" src="img/mobile/games3-2.png" alt="games3-2"/>
+                        <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    </div>
+
                 </div>
             </div>
 
             <div class="content-item">
-                <div class="content-item-block">
-                    <img class="item-block-num" src="img/mobile/number7.png" alt="number7"/>
-                    <div class="item-block-cont">
-                        <p class="item-block-title">Тестирование</p>
-                        <p class="item-block-text">Качественное и современное тестирование - это верный путь к запуску действительно качественного продукта</p>
+                <div class="content-item-cont container">
+                    <div class="content-item-blockImg">
+                        <img class="content-item-img" src="img/mobile/games4.png" alt="games4"/>
+                        <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    </div>
+
+
+                    <div class="content-item-block">
+                        <img class="item-block-num" src="img/mobile/number4.png" alt="number4"/>
+                        <p class="item-block-title">Проработка геймплея</p>
+                        <p class="item-block-text">Это своего рода способы удержания в игре - дополнительные функции, бонусы и секретные предметы</p>
                     </div>
                 </div>
+            </div>
 
-                <img class="content-item-img" src="img/mobile/games7.png" alt="games7"/>
+            <div class="content-item">
+                <div class="content-item-cont container">
+                    <div class="content-item-block">
+                        <img class="item-block-num" src="img/mobile/number5.png" alt="number5"/>
+                        <div class="item-block-cont">
+                            <p class="item-block-title">Выбор платформы</p>
+                            <p class="item-block-text">Android, iOS, кроссплатформенная</p>
+                        </div>
+                    </div>
+
+                    <div class="content-item-blockImg">
+                        <img class="content-item-img" src="img/mobile/games5.png" alt="games5"/>
+                        <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="content-item">
+                <div class="content-item-cont container">
+
+                    <div class="content-item-blockImg">
+                        <img class="content-item-img" src="img/mobile/games6.png" alt="games6"/>
+                        <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    </div>
+
+                    <div class="content-item-block">
+                        <img class="item-block-num" src="img/mobile/number6.png" alt="number6"/>
+                        <p class="item-block-title">Геймдизайн</p>
+                        <p class="item-block-text">Самый длительный, ведь именно сейчас прорабатывается история, отрисовываются персонажи и весь пользовательский путь</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-item">
+                <div class="content-item-cont container">
+                    <div class="content-item-block">
+                        <img class="item-block-num" src="img/mobile/number7.png" alt="number7"/>
+                        <div class="item-block-cont">
+                            <p class="item-block-title">Тестирование</p>
+                            <p class="item-block-text">Качественное и современное тестирование - это верный путь к запуску действительно качественного продукта</p>
+                        </div>
+                    </div>
+
+                    <div class="content-item-blockImg">
+                        <img class="content-item-img" src="img/mobile/games7.png" alt="games7"/>
+                        <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    </div>
+
+                </div>
             </div>
 
         </div>
 
-        <div class="mobile-tools">
+        <div class="mobile-tools container">
             <p class="mobile-tools-title">Инструменты, с которыми мы работаем</p>
             <div class="mobile-tools-gallery">
                 <img class="tools-gallery-item" src="img/mobile/tool1.svg" alt="tool1"/>
