added adaptive styles for come classes in all pages (page-header, page-pros)

--- a/src/maintenance.html
+++ b/src/maintenance.html
@@ -22,9 +22,7 @@
 
         <div class="page-header">
             <button class="page-blueBtn">Нужно сопровождение
-                <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 11L6 6L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -100,42 +98,44 @@
 
 <!--        </div>-->
 
-        <div class="page-pros">
+
             <div class="page-pros-container container">
                 <p class="page-pros-title">Плюсы работы с нами</p>
-                <div class="page-pros-item">
-                    <svg class="svg-qualification"  width="40" height="28">
-                        <use href="#qualification"/>
-                    </svg>
-                    <p class="pros-item-header">Квалификация сотрудников</p>
-                    <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-                </div>
 
-                <div class="page-pros-item">
-                    <svg class="svg-calendar" width="30" height="34">
-                        <use href="#calendar"/>
-                    </svg>
-                    <p class="pros-item-header">Опыт более 12 лет</p>
-                    <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
-                </div>
+                <div class="page-pros-items">
+                    <div class="page-pros-item">
+                        <svg class="svg-qualification"  width="40" height="28">
+                            <use href="#qualification"/>
+                        </svg>
+                        <p class="pros-item-header">Квалификация сотрудников</p>
+                        <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
+                    </div>
 
-                <div class="page-pros-item">
-                    <svg class="svg-complex" width="38" height="40">
-                        <use href="#complex"/>
-                    </svg>
-                    <p class="pros-item-header">Индивидуальный подход</p>
-                    <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
-                </div>
+                    <div class="page-pros-item">
+                        <svg class="svg-calendar" width="30" height="34">
+                            <use href="#calendar"/>
+                        </svg>
+                        <p class="pros-item-header">Опыт более 12 лет</p>
+                        <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
+                    </div>
 
-                <div class="page-pros-item">
-                    <svg class="svg-transparency" width="42" height="30">
-                        <use href="#transparency"/>
-                    </svg>
-                    <p class="pros-item-header">Максимальная прозрачность</p>
-                    <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+                    <div class="page-pros-item">
+                        <svg class="svg-complex" width="38" height="40">
+                            <use href="#complex"/>
+                        </svg>
+                        <p class="pros-item-header">Индивидуальный подход</p>
+                        <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
+                    </div>
+
+                    <div class="page-pros-item">
+                        <svg class="svg-transparency" width="42" height="30">
+                            <use href="#transparency"/>
+                        </svg>
+                        <p class="pros-item-header">Максимальная прозрачность</p>
+                        <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
         @@include('html/home/prefooter.html',{})
 
