--- a/src/integrations.html
+++ b/src/integrations.html
@@ -22,9 +22,7 @@
 
         <div class="page-header">
             <button class="page-blueBtn">Заказать интеграцию
-                <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 11L6 6L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -75,10 +73,9 @@
         @@include('html/home/prefooter.html',{})
 
 
-        <div class="page-pros">
             <div class="page-pros-container container">
                 <p class="page-pros-title">Плюсы работы с нами</p>
-                <div class="page-pros-block">
+                <div class="page-pros-items">
                     <div class="page-pros-item">
                         <svg class="svg-qualification"  width="40" height="28">
                             <use href="#qualification"/>
@@ -112,7 +109,6 @@
                     </div>
                 </div>
             </div>
-        </div>
 
     </section>
 </main>
