crm-implement: added adaptive design

--- a/src/crm-implement.html
+++ b/src/crm-implement.html
@@ -36,47 +36,46 @@
         </div>
 
         <div class="crm-implement-content">
-            <div class="crm-implement-content-blur">
-                <div class="crm-implement-content-cont container">
-                    <div class="crm-implement-content-block">
-                        <p class="content-header">Пришло время оптимизации бизнеса!</p>
-                        <div class="page-list-block">
-                            <p class="page-list-blueTitle">Почему Битрикс24?</p>
-                            <div class="page-list-list">
-                                <div class="page-list-item">
-                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                    <span class="page-list-text">Большой спектр возможностей для работы с клиентом и не только. Корпоративный портал, можно наладить работу разных отделов.</span>
-                                </div>
-                                <div class="page-list-item">
-                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                    <span class="page-list-text">Возможность автоматизации и оптимизации бизнес-процессов</span>
-                                </div>
-                                <div class="page-list-item">
-                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                    <span class="page-list-text">Интеграция большого количества сервисов и ПО, в том числе и с 1С</span>
-                                </div>
-                                <div class="page-list-item">
-                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                    <span class="page-list-text">Удобный функционал</span>
-                                </div>
-                                <div class="page-list-item">
-                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                    <span class="page-list-text">Контроль и отслеживание корректной работы сайта и хостинг-сервера</span>
-                                </div>
-                                <div class="page-list-item">
-                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                    <span class="page-list-text">Очень гибкий функционал, который хорошо дорабатывается под потребности компании</span>
-                                </div>
-                            </div>
+            <p class="content-header container">Пришло время оптимизации бизнеса!</p>
+            <div class="crm-implement-content-imgBlock">
+                <img class="crm-implement-content-imgMen" src="img/crm/office-man.png" alt="office-man"/>
+            </div>
+            <div class="container">
+                <div class="page-list-block">
+                    <p class="page-list-blueTitle">Почему Битрикс24?</p>
+                    <div class="page-list-list">
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Большой спектр возможностей для работы с клиентом и не только. Корпоративный портал, можно наладить работу разных отделов.</span>
                         </div>
-                    </div>
-                    <div class="crm-implement-content-img">
-                        <img class="content-img" src="img/crm/office-man.png" alt="office-man"/>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Возможность автоматизации и оптимизации бизнес-процессов</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Интеграция большого количества сервисов и ПО, в том числе и с 1С</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Удобный функционал</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Контроль и отслеживание корректной работы сайта и хостинг-сервера</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Огромный функционал для маркетинга, включая сквозную аналитику</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Очень гибкий функционал, который хорошо дорабатывается под потребности компании</span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
 
         <div class="crm-implement-rates">
             <img class="crm-implement-rates-img" src="img/crm/bitrix-box.png" alt="bitrix"/>
