--- a/src/automation.html
+++ b/src/automation.html
@@ -30,42 +30,60 @@
 
 <!--        <div class="automation-content">-->
         <div class="automation-advantages">
-            <div class="automation-advantages-cont container">
-                <p class="advantages-title">Время автоматизировать процессы!</p>
-                <div class="page-list-block">
+            <div class="automation-advantages-imgBgd">
+                <div class="automation-advantages-cont container">
+                    <p class="advantages-title">Время автоматизировать процессы!</p>
+                    <div class="page-list-block">
 
-                    <p class="page-list-blueTitle">Преимущества:</p>
+                        <p class="page-list-blueTitle">Преимущества:</p>
 
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Благодаря автоматизированным бизнес-процессам, компания работает более эффективно не менее чем на 30%.</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Снижение влияния человеческого фактора на 20%</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Автоматизация 24/7 в режиме реального времени, тем самым исключаются ошибки.</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Четкое видение результатов деятельности в цифрах,регламентирование деятельности сотрудников, а отчеты могут формироваться сами.</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Избавление от шаблонных действий (освобождается временной ресурс)</span>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Благодаря автоматизированным бизнес-процессам, компания работает более эффективно не менее чем на 30%.</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Снижение влияния человеческого фактора на 20%</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Автоматизация 24/7 в режиме реального времени, тем самым исключаются ошибки.</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Четкое видение результатов деятельности в цифрах,регламентирование деятельности сотрудников, а отчеты могут формироваться сами.</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Избавление от шаблонных действий (освобождается временной ресурс)</span>
+                        </div>
                     </div>
                 </div>
             </div>
-            <img class="advantages-imgLightning" src="img/automation/lightning.png" alt="roboarm"/>
-            <img class="advantages-imgRoboarm" src="img/automation/roboarm.png" alt="roboarm"/>
         </div>
 
 
-        <div>
-<!--            <img class="automation-img" src="img/automation/robot-automation.png" alt="directions"/>-->
-            <img class="automation-img" src="img/automation/directions.png" alt="directions"/>
+        <div class="automation-rates">
+            <img class="automation-rates-img" src="img/automation/robot-automation.png" alt="directions"/>
+            <div class="automation-rates-cont container">
+                <div class="automation-rates-block">
+                    <p class="rates-header">Автоматизация важных бизнес-процессов может проводиться в двух направлениях:</p>
+                    <div class="rates-item">
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                        <div>
+                            <p class="rates-title">Работа над основными бизнес-процессами</p>
+                            <p class="rates-text"> (общение с клиентами, управление продажами). Цель автоматизации данной сферы – повышение качества выпускаемой продукции, увеличение объема продаж, повышение доходности бизнеса.</p>
+                        </div>
+                    </div>
+                    <div class="rates-item">
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                        <div>
+                            <p class="rates-title">Упрощение поддерживающих процессов.</p>
+                            <p class="rates-text"> В качестве таких процессов может выступать бухгалтерский учет, делопроизводство, отчетность. Автоматизация этих действий не повлияет на увеличение доходов напрямую, однако поможет уменьшить время на выполнение рутинной работы.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="page-pros-container container">
